--- a/web/index.html
+++ b/web/index.html
@@ -47,8 +47,16 @@
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
+        /*
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
+        */
+        onEntrypointLoaded: function(engineInitializer) {
+          let config = { renderer: 'html' }; // make the image network works in web
+          engineInitializer.initializeEngine(config).then(function(appRunner) {
             appRunner.runApp();
           });
         }
